styles/style.css
body {
	background: #222;
}

@media (min-width: 768px) {
	.seven-cols .col-md-1,
	.seven-cols .col-sm-1,
	.seven-cols .col-lg-1 {
		width: 100%;
		*width: 100%;
	}
}

@media (min-width: 992px) {
	.seven-cols .col-md-1,
	.seven-cols .col-sm-1,
	.seven-cols .col-lg-1 {
		width: 14.28%;
		*width: 14.28%;
	}
}

@media (min-width: 1200px) {
	.seven-cols .col-md-1,
	.seven-cols .col-sm-1,
	.seven-cols .col-lg-1 {
		width: 14.28%;	
		*width: 14.28%;
	}
}

@media screen and (max-height: 450px) {
	.overlay p {font-sizw: 20px}
	.closebtn {
		font-size: 40px !important;
		top: 15px;
		right: 35px;
	}
}

.overlay {
	height: 0%;
	width: 100%;
	position: fixed;
	z-index: 1;
	left: 0;
	top: 50px;
	background-color: rgb(0,0,0);
	background-color: rgba(0,0,0, 0.9);
	overflow-x: hidden;
	transition: 0.5s;
}

.overlay-content {
	position: relative;
	top: 25%;
	width: 100%;
	text-align: center;
	margin-top: 30px;
}

.overlay p {
	padding: 8px;
	font-size: 36px;
	color: #818181;
}

#HelpOverlay p {
	font-size: 16px;
}

.closeBtn {
	position: absolute;
	top: 20px;
	right: 45px;
	font-size: 60px;
}

#Toolbar ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	margin-bottom: 20px;
	overflow: hidden;
	background-color: #333;
	height: 50px;
}

#Toolbar h7 {
	float: left;
	color: white;
	padding: 14px 16px;
	text-align: center;
}

#Toolbar li button {
	float: right;
	display: block;
	color: white;
	background-color: #333;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
	border: none;
	width: 120px;
	outline: none;
}

#Toolbar li input {
	position: absolute;
}

#Toolbar li button:hover {
	background-color: #111;
}

#ClearModeContainer {
	width: 1000px;
	margin-top: 60px;
}

.ClearModeDiv {
	background-color: #313131;
	height: 180px;
	margin: 20px;
	text-align: center;
	color: white;
	padding-top: 10px;
}

#ClearAllButton {
	display: block;
	position: absolute;
	bottom: 0px;
	width: 100%;
	left: 0px;
	height: 40px;
	outline: none !important;
}

#CharContainer {
	max-width: 1200px;
	min-width: 200px;
}

.CharDiv {
	margin-top: 10px;
}

.CharButton {
	background-color: #313131;
	height: 90px;
	border: none;
	outline: none;
}

.CharButton:hover {
	background-color: #234366;
}

.CharButton:active {
	background-color: #E00000;
}

.CharButtonSelected {
	background-color: #006D91;
}

.CharButtonSelected:hover {
	background-color: #56A6CC;
}

.CharButtonClearMode {
	background-color: #313131;
	height: 90px;
	border: none;
	outline: none;
}

.CharButtonClearMode:hover {
	background-color: #C20000;
}

.CharButtonClearMode:active {
	background-color: #E00000;
}

.MatchupLabel {
	display: block;
	position: relative;
	bottom: 20px;
	right: -40px;
	color: white;
	font-size: 20px;
}

#MatchupToggleButton {
	position: absolute;
	right: 15%;
	outline: none !important;
}

#SelectContainer {
	width: 1000px;
	margin-top: 60px;
}

.CharacterPortraitDiv {
	position: absolute;
}

.CharacterPortrait {
	position: absolute;
	height: 300px;
	z-index: -1;
}

.RemoveBtn {
	float: left;
	height: 300px;
	background: none;
	outline: none;
	border: none;
	color: white;
	font-size: 40px;
	width: 40px;
	outline: none !important;
}

.RemoveBtn:hover {
	background-color: #234366;
	opacity: 0.8;
	color: #C20000;	
	transition-duration: 0.5s;
}

.RemoveBtn:active {
	background-color: #E00000;
	transition-duration: 0.1s;
}

.MiddleSelectDiv {
	background-color: #313131;
	height: 180px;
	margin: 20px;
	text-align: center;
}

#TrackBarLabel {
	display: block;
	text-align: center;
	color: white;
}

#HelperText {
	color: white;
}

.SubmitButton {
	display: block;
	position: absolute;
	bottom: 0px;
	width: 100%;
	left: 0px;
	height: 40px;
	outline: none !important;
}

.DeleteMatchupButton {
	position: absolute;
	left: 0px;
	bottom: -40px;
	width: 100%;
	outline: none !important;
}

.ShareCharTile {
	position: relative;
	margin: 10px;
	top: -100px;

}

#ShareCanvas {
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 60px;
}

.ShareCharButton {
	background-color: #313131;
	height: 60px;
	border: none;
	outline: none;
	margin-top: 6px;
}

.ShareCharButton:hover {
	background-color: #234366;
}

.ShareCharButton:active {
	background-color: #E00000;
}


/* following range style generated from danielstern.ca/range.css/ */
input[type=range] {
  -webkit-appearance: none;
  width: 100%;
  margin: 9.5px 0;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 6px;
  cursor: pointer;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  background: #f00000;
  border-radius: 25px;
  border: 1px solid #010101;
}
input[type=range]::-webkit-slider-thumb {
  box-shadow: 1px 1px 4px #000000, 0px 0px 1px #0d0d0d;
  border: 1px solid #000000;
  height: 20px;
  width: 20px;
  border-radius: 20px;
  background: #ffffff;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -8px;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: #ff2424;
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: 6px;
  cursor: pointer;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  background: #f00000;
  border-radius: 25px;
  border: 1px solid #010101;
}
input[type=range]::-moz-range-thumb {
  box-shadow: 1px 1px 4px #000000, 0px 0px 1px #0d0d0d;
  border: 1px solid #000000;
  height: 20px;
  width: 20px;
  border-radius: 20px;
  background: #ffffff;
  cursor: pointer;
}
input[type=range]::-ms-track {
  width: 100%;
  height: 6px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
input[type=range]::-ms-fill-lower {
  background: #bd0000;
  border: 1px solid #010101;
  border-radius: 50px;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}
input[type=range]::-ms-fill-upper {
  background: #ffffff;
  border: 1px solid #010101;
  border-radius: 50px;
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}
input[type=range]::-ms-thumb {
  box-shadow: 1px 1px 4px #000000, 0px 0px 1px #0d0d0d;
  border: 1px solid #000000;
  height: 20px;
  width: 20px;
  border-radius: 20px;
  background: #ffffff;
  cursor: pointer;
  margin-top: 0px;
}
input[type=range]:focus::-ms-fill-lower {
  background: #f00000;
}
input[type=range]:focus::-ms-fill-upper {
  background: #ffffff;
}

